버그 수정 및 화면 회전 잠금 코드 추가
필요 없을 시 코드 삭제 필요

--- a/heyGongC_Camera/Storyboard/QRCodeGenerator.storyboard
+++ b/heyGongC_Camera/Storyboard/QRCodeGenerator.storyboard
@@ -76,6 +76,7 @@
                     </view>
                     <connections>
                         <outlet property="imgViewQRCode" destination="bcZ-di-VDM" id="n8W-iH-Y9E"/>
+                        <outlet property="viewQRCode" destination="oDc-dx-Lsj" id="fzv-eT-GA7"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ief-a0-LHa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
